--- a/roles/caddy/templates/Caddyfile.j2
+++ b/roles/caddy/templates/Caddyfile.j2
@@ -16,6 +16,8 @@
         # interface. If admin over TCP is turned on one should make sure
         # implications are well understood.
         admin "unix//run/caddy/admin.socket"
+
+        email niuchangcun@gmail.com
 }
 
 # Import additional caddy config files in /etc/caddy/conf.d/
