--- a/roles/dpb/templates/dpb.gunicorn.service.j2
+++ b/roles/dpb/templates/dpb.gunicorn.service.j2
@@ -11,7 +11,7 @@ Group=root
 # DynamicUser=yes
 # see http://0pointer.net/blog/dynamic-users-with-systemd.html
 RuntimeDirectory=dpb_gunicorn
-WorkingDirectory=/root/dpb
+WorkingDirectory={{ project_path }}
 ExecStart={{ venv_path }}/bin/gunicorn --workers=4 -b 127.0.0.1:1300 dpb.wsgi
 ExecReload=/bin/kill -s HUP $MAINPID
 KillMode=mixed
