--- a/roles/miniflux/templates/docker-compose.yml.j2
+++ b/roles/miniflux/templates/docker-compose.yml.j2
@@ -13,6 +13,8 @@ services:
       - CREATE_ADMIN=1
       - ADMIN_USERNAME=admin
       - ADMIN_PASSWORD={{ADMIN_PASSWORD}}
+      - POLLING_FREQUENCY=120 # default is 60
+      - POLLING_PARSING_ERROR_LIMIT=0 # 0 is unlimited, default is 3
   db:
     image: postgres:latest
     environment:
