new hosts: hk2 and moo2

--- a/roles/nwu.icu/templates/nwu.icu.caddy.j2
+++ b/roles/nwu.icu/templates/nwu.icu.caddy.j2
@@ -15,3 +15,7 @@ nwu.icu {
 course.nwu.icu {
     redir https://nwu.icu{uri} permanent
 }
+
+report.nwu.icu {
+    redir https://nwu.icu/report/ permanent
+}
