role: add gitea

--- a/roles/arch_common/templates/sshd_config.j2
+++ b/roles/arch_common/templates/sshd_config.j2
@@ -114,3 +114,8 @@ Subsystem	sftp	/usr/lib/ssh/sftp-server
 #	AllowTcpForwarding no
 #	PermitTTY no
 #	ForceCommand cvs server
+
+# FIXME: not tied in one inventory name
+{% if 'beijing' in group_names %}
+AllowUsers gitea
+{% endif %}
