--- a/roles/miniflux/templates/docker-compose.yml.j2
+++ b/roles/miniflux/templates/docker-compose.yml.j2
@@ -16,7 +16,7 @@ services:
       - POLLING_FREQUENCY=120 # default is 60
       - POLLING_PARSING_ERROR_LIMIT=0 # 0 is unlimited, default is 3
   db:
-    image: postgres:latest
+    image: postgres:13
     environment:
       - POSTGRES_USER=miniflux
       - POSTGRES_PASSWORD={{POSTGRES_PASSWORD}}
