gitea: tweak some configs

--- a/roles/arch_common/templates/sshd_config.j2
+++ b/roles/arch_common/templates/sshd_config.j2
@@ -117,5 +117,5 @@ Subsystem	sftp	/usr/lib/ssh/sftp-server
 
 # FIXME: not tied in one inventory name
 {% if 'beijing' in group_names %}
-AllowUsers gitea
+AllowUsers root gitea
 {% endif %}
