--- a/roles/rsshub/templates/docker-compose.yml.j2
+++ b/roles/rsshub/templates/docker-compose.yml.j2
@@ -2,7 +2,7 @@ version: '3'
 
 services:
     rsshub:
-        image: diygod/rsshub
+        image: diygod/rsshub:latest
         restart: always
         ports:
             - '127.0.0.1:1200:1200'
