beian: minor tweaks

--- a/roles/beian/templates/index.html.j2
+++ b/roles/beian/templates/index.html.j2
@@ -8,7 +8,7 @@
 <body>
 
 <h1>Coherence</h1>
-<p>正在建设中...</p>
+<p>Hello, world!</p>
 <footer><a href="https://beian.miit.gov.cn/" target="_blank">苏ICP备20012403号-1</a></footer>
 
 </body>
