--- a/roles/caddy/templates/Caddyfile.j2
+++ b/roles/caddy/templates/Caddyfile.j2
@@ -17,7 +17,7 @@
         # implications are well understood.
         admin "unix//run/caddy/admin.socket"
 
-        email niuchangcun@gmail.com
+        email {{ email }}
 }
 
 # Import additional caddy config files in /etc/caddy/conf.d/
