--- a/roles/authelia/templates/configuration.yml.j2
+++ b/roles/authelia/templates/configuration.yml.j2
@@ -4,7 +4,7 @@
 ###############################################################
 
 jwt_secret: {{ secret }}
-default_redirection_url: https://example.com
+default_redirection_url: {{ auth_server }}
 
 server:
   host: 0.0.0.0
