--- a/roles/monitoring_server/templates/grafana.ini.j2
+++ b/roles/monitoring_server/templates/grafana.ini.j2
@@ -474,13 +474,13 @@ oauth_auto_login = true
 #################################### Anonymous Auth ######################
 [auth.anonymous]
 # enable anonymous access
-;enabled = false
+enabled = true
 
 # specify organization name that should be used for unauthenticated users
 ;org_name = Main Org.
 
 # specify role for unauthenticated users
-;org_role = Viewer
+org_role = Viewer
 
 # mask the Grafana version number for unauthenticated users
 ;hide_version = false
