--- a/roles/rsshub/templates/docker-compose.yml.j2
+++ b/roles/rsshub/templates/docker-compose.yml.j2
@@ -9,6 +9,7 @@ services:
         environment:
             NODE_ENV: production
             PUPPETEER_WS_ENDPOINT: 'ws://browserless:3000'
+            DEBUG_INFO: false
         depends_on:
             - browserless
 
