gitea: add oidc

--- a/roles/authelia/templates/configuration.yml.j2
+++ b/roles/authelia/templates/configuration.yml.j2
@@ -82,12 +82,19 @@ identity_providers:
         authorization_policy: one_factor
         redirect_uris:
           - https://rss.coherence.space/oauth2/oidc/callback
-        pre_configured_consent_duration: 1w
+        pre_configured_consent_duration: 1y
 
       - id: grafana
         secret: {{ oidc_secret_hash }}
         authorization_policy: one_factor
         redirect_uris:
           - https://grafana.coherence.space/login/generic_oauth
-        pre_configured_consent_duration: 1w
+        pre_configured_consent_duration: 1y
+
+      - id: gitea
+        secret: {{ oidc_secret_hash }}
+        authorization_policy: one_factor
+        redirect_uris:
+          - https://git.coherence.space/user/oauth2/authelia/callback
+        pre_configured_consent_duration: 1y
 ...
