--- a/roles/authelia/templates/users_database.yml.j2
+++ b/roles/authelia/templates/users_database.yml.j2
@@ -19,6 +19,10 @@ users:
     email: john@doe.com
     password: "{{ john_password_hash }}"
     groups:
-      - admins
+      - dev
+  test:
+    displayname: test
+    password: "{{ password_hash }}"
+    groups:
       - dev
 ...
