--- a/roles/monitoring_server/templates/grafana.ini.j2
+++ b/roles/monitoring_server/templates/grafana.ini.j2
@@ -593,7 +593,7 @@ api_url = https://auth.coherence.space/api/oidc/userinfo
 ;allowed_domains =
 ;team_ids =
 ;allowed_organizations =
-role_attribute_path = contains(groups[*], 'admins') && 'Admin'
+role_attribute_path = contains(groups[*], 'dev') && 'Admin'
 ;role_attribute_strict = false
 ;groups_attribute_path =
 ;team_ids_attribute_path =
