--- a/roles/fava/templates/fava.caddy.j2
+++ b/roles/fava/templates/fava.caddy.j2
@@ -1,10 +1,11 @@
 fava.coherence.space {
     reverse_proxy 127.0.0.1:6674
-    forward_auth https://auth.coherence.space {
+    {# FIXME: upstream can't be a https site, see: https://git.coherence.space/cjc7373/issue_tracker/issues/107 #}
+    forward_auth 127.0.0.1:8045 {
 		uri /api/verify?rd=https://auth.coherence.space
         {# This Host rewrite is necessary, See: 
         https://caddyserver.com/docs/caddyfile/directives/reverse_proxy#https #}
-        header_up Host {upstream_hostport}
+        {# header_up Host {upstream_hostport} #}
 		copy_headers Remote-User Remote-Groups Remote-Name Remote-Email
 	}
     log {
