--- a/roles/gitea/templates/app.ini.j2
+++ b/roles/gitea/templates/app.ini.j2
@@ -1,21 +1,76 @@
 APP_NAME = "Coherence's git"
+RUN_USER = gitea
+RUN_MODE = prod
 
 [server]
-DOMAIN = "git.coherence.space"
-ROOT_URL = "https://git.coherence.space"
-HTTP_ADDR = 127.0.0.1
-HTTP_PORT = 9010
+DOMAIN           = git.coherence.space
+ROOT_URL         = https://git.coherence.space/
+HTTP_ADDR        = 127.0.0.1
+HTTP_PORT        = 9010
+SSH_DOMAIN       = git.coherence.space
+DISABLE_SSH      = false
+SSH_PORT         = 22
+LFS_START_SERVER = true
+LFS_JWT_SECRET   = {{ LFS_JWT_SECRET }}
+OFFLINE_MODE     = false
 
 [database]
-DB_TYPE = sqlite3
-PATH = /var/lib/gitea/gitea.db
+DB_TYPE  = sqlite3
+PATH     = /var/lib/gitea/gitea.db
+HOST     = 
+NAME     = 
+USER     = 
+PASSWD   = 
+SCHEMA   = 
+SSL_MODE = disable
+CHARSET  = utf8
+LOG_SQL  = false
 
 [service]
-DISABLE_REGISTRATION = true
-REQUIRE_SIGNIN_VIEW = true
+DISABLE_REGISTRATION              = true
+REQUIRE_SIGNIN_VIEW               = true
+REGISTER_EMAIL_CONFIRM            = false
+ENABLE_NOTIFY_MAIL                = false
+ALLOW_ONLY_EXTERNAL_REGISTRATION  = false
+ENABLE_CAPTCHA                    = false
+DEFAULT_KEEP_EMAIL_PRIVATE        = false
+DEFAULT_ALLOW_CREATE_ORGANIZATION = true
+DEFAULT_ENABLE_TIMETRACKING       = true
+NO_REPLY_ADDRESS                  = noreply.git.coherence.space
 
 [ui]
 ISSUE_PAGING_NUM = 100
 
 [session]
-SESSION_LIFE_TIME = 8640000  # 100 days
+SESSION_LIFE_TIME = 8640000 # 100 days
+PROVIDER          = file
+
+[repository]
+ROOT = /var/lib/gitea/data/gitea-repositories
+
+[lfs]
+PATH = /var/lib/gitea/data/lfs
+
+[mailer]
+ENABLED = false
+
+[openid]
+ENABLE_OPENID_SIGNIN = true
+ENABLE_OPENID_SIGNUP = false
+
+[log]
+MODE      = console
+LEVEL     = info
+ROOT_PATH = /var/lib/gitea/log
+ROUTER    = console
+
+[repository.pull-request]
+DEFAULT_MERGE_STYLE = merge
+
+[repository.signing]
+DEFAULT_TRUST_MODEL = committer
+
+[security]
+INSTALL_LOCK       = true
+INTERNAL_TOKEN     = {{ INTERNAL_TOKEN }}
+PASSWORD_HASH_ALGO = pbkdf2
