--- a/roles/monitoring_server/templates/prometheus.yml.j2
+++ b/roles/monitoring_server/templates/prometheus.yml.j2
@@ -7,7 +7,7 @@ scrape_configs:
       # metrics_path defaults to '/metrics'
       # scheme defaults to 'http'.
       static_configs:
-          - targets: ['localhost:9100']
+          - targets: ['hk:9100', "deskmini:9100", "jp:9100", "beijing:9100"]
 
     - job_name: 'prometheus'
       scheme: https
