firewalld: allow tailscale port

--- a/roles/arch_common/templates/firewalld_public.xml.j2
+++ b/roles/arch_common/templates/firewalld_public.xml.j2
@@ -7,5 +7,6 @@
   <service name="http"/>
   <service name="https"/>
   <service name="syncthing"/>
+  <service name="tailscale"/>
   <forward/>
 </zone>
