--- a/roles/monitoring_server/templates/datasources.yaml.j2
+++ b/roles/monitoring_server/templates/datasources.yaml.j2
@@ -6,3 +6,9 @@ datasources:
   access: proxy
   url: http://localhost:9090
   editable: false
+
+- name: Prometheus-longterm
+  type: prometheus
+  access: proxy
+  url: http://localhost:9091
+  editable: false
