prometheus: caddy and miniflux metrics

--- a/roles/monitoring_server/templates/prometheus-longterm.yml.j2
+++ b/roles/monitoring_server/templates/prometheus-longterm.yml.j2
@@ -1,2 +1,7 @@
 global:
   scrape_interval: 1h
+
+scrape_configs:
+  - job_name: "miniflux"
+    static_configs:
+      - targets: ['localhost:8123']
