--- a/roles/caddy/templates/Caddyfile.j2
+++ b/roles/caddy/templates/Caddyfile.j2
@@ -10,16 +10,14 @@
 # https://caddyserver.com/docs/caddyfile/concepts#addresses
 
 {
-        # Restrict the admin interface to a local unix file socket whose directory
-        # is restricted to caddy:caddy. By default the TCP socket allows arbitrary
+        # By default the TCP socket allows arbitrary
         # modification for any process and user that has access to the local
         # interface. If admin over TCP is turned on one should make sure
         # implications are well understood.
-        admin "unix//run/caddy/admin.socket"
+        admin "0.0.0.0:2019"
 
         email {{ email }}
 
-        # FIXME: metrics will be visited by admin endpoint, and that is a socket...
         servers {
                 metrics
         }
