--- a/roles/monitoring_server/templates/prometheus.yml.j2
+++ b/roles/monitoring_server/templates/prometheus.yml.j2
@@ -7,7 +7,13 @@ scrape_configs:
       # metrics_path defaults to '/metrics'
       # scheme defaults to 'http'.
       static_configs:
-          - targets: ['hk:9100', "deskmini:9100", "jp:9100", "beijing:9100", "onlyfans-router:9100"]
+          - targets:
+            - 'hk:9100'
+            - "deskmini:9100"
+            - "jp:9100"
+            - "beijing:9100"
+            - "onlyfans-router:9100"
+            - "nwu-icu:9100"
 
     - job_name: 'prometheus'
       scheme: https
@@ -26,4 +32,4 @@ scrape_configs:
 
     - job_name: "caddy"
       static_configs:
-          - targets: ['beijing:2019']
+          - targets: ['beijing:2019', "nwu-icu:2019"]
