gitea: tweak GC_INTERVAL_TIME
See if it works for prolonging the session lifetime

--- a/roles/gitea/templates/app.ini.j2
+++ b/roles/gitea/templates/app.ini.j2
@@ -43,6 +43,7 @@ ISSUE_PAGING_NUM = 100
 
 [session]
 SESSION_LIFE_TIME = 8640000 # 100 days
+GC_INTERVAL_TIME  = 8640000
 PROVIDER          = file
 
 [repository]
