miniflux: allow oidc user creation

--- a/roles/miniflux/templates/docker-compose.yml.j2
+++ b/roles/miniflux/templates/docker-compose.yml.j2
@@ -24,6 +24,7 @@ services:
       # We don't need to append the discovery URI /.well-known/openid-configuration
       # cause miniflux will add this for us
       - OAUTH2_OIDC_DISCOVERY_ENDPOINT=https://auth.coherence.space
+      - OAUTH2_USER_CREATION=1
       - CLEANUP_REMOVE_SESSIONS_DAYS=365
       # disable cleanup (since the total amount of entries is relatively small)
       - CLEANUP_ARCHIVE_UNREAD_DAYS=-1
