remove jp server

--- a/roles/trojan/templates/config.json.j2
+++ b/roles/trojan/templates/config.json.j2
@@ -14,7 +14,7 @@
     "websocket": {
         "enabled": true,
         "path": "/a-very-long-path",
-        "host": "jp.coherence.codes"  
+        "host": "hk.coherence.codes"  
         {# FIXME: decouple with specific domain #}
     }
 }
