--- a/roles/trojan/templates/trojan.caddy.j2
+++ b/roles/trojan/templates/trojan.caddy.j2
@@ -1,5 +1,5 @@
 {# FIXME: decouple with specific domain #}
-jp.coherence.codes {
+hk.coherence.codes {
     reverse_proxy 127.0.0.1:12987
     log {
 	    output file /var/log/caddy/trojan_access.log
