screen, grafana, tailscale minor fix

--- a/roles/monitoring_server/templates/grafana.ini.j2
+++ b/roles/monitoring_server/templates/grafana.ini.j2
@@ -453,6 +453,9 @@ root_url = https://grafana.coherence.space
 # This setting is ignored if multiple OAuth providers are configured.
 oauth_auto_login = true
 
+# See https://grafana.com/docs/grafana/latest/setup-grafana/configure-security/configure-authentication/#enable-email-lookup
+oauth_allow_insecure_email_lookup = true
+
 # OAuth state max age cookie duration in seconds. Defaults to 600 seconds.
 ;oauth_state_cookie_max_age = 600
 
