update firewalld rules

--- a/roles/arch_common/templates/firewalld_public.xml.j2
+++ b/roles/arch_common/templates/firewalld_public.xml.j2
@@ -8,5 +8,7 @@
   <service name="https"/>
   <service name="syncthing"/>
   <service name="tailscale"/>
+  <port port="50000-51000" protocol="tcp"/>
+  <port port="50000-51000" protocol="udp"/>
   <forward/>
 </zone>
