update syncthing conf

--- a/roles/syncthing/templates/docker-compose.yml.j2
+++ b/roles/syncthing/templates/docker-compose.yml.j2
@@ -8,4 +8,6 @@ services:
       - ./:/var/syncthing
     environment:
       - STGUIADDRESS=
+      - PUID=0
+      - PGUI=0
     network_mode: "host"
