role: add docker registry

--- a/roles/arch_common/templates/sshd_config.j2
+++ b/roles/arch_common/templates/sshd_config.j2
@@ -120,5 +120,5 @@ Subsystem	sftp	/usr/lib/ssh/sftp-server
 
 # FIXME: not tied in one inventory name
 {% if 'beijing' in group_names %}
-AllowUsers root gitea
+AllowUsers root gitea zjb
 {% endif %}
