--- a/roles/gitea/templates/app.ini.j2
+++ b/roles/gitea/templates/app.ini.j2
@@ -1,6 +1,7 @@
 APP_NAME = "Coherence's git"
 RUN_USER = gitea
 RUN_MODE = prod
+WORK_PATH = /var/lib/gitea
 
 [server]
 DOMAIN           = git.coherence.space
@@ -42,6 +43,7 @@ NO_REPLY_ADDRESS                  = noreply.git.coherence.space
 ISSUE_PAGING_NUM = 100
 
 [session]
+PROVIDER = db
 SESSION_LIFE_TIME = 8640000 # 100 days
 GC_INTERVAL_TIME  = 8640000
 PROVIDER          = file
