--- a/roles/monitoring_server/templates/prometheus.yml.j2
+++ b/roles/monitoring_server/templates/prometheus.yml.j2
@@ -11,7 +11,7 @@ scrape_configs:
             - 'hk:9100'
             - "deskmini:9100"
             - "beijing:9100"
-            - "onlyfans-router:9100"
+            - "friendlywrt:9100"
             - "nwu-icu:9100"
 
     - job_name: 'prometheus'
