--- a/roles/plausible_analytics/templates/docker-compose.yml.j2
+++ b/roles/plausible_analytics/templates/docker-compose.yml.j2
@@ -36,3 +36,8 @@ services:
       - 127.0.0.1:22214:8000
     env_file:
       - plausible-conf.env
+    ulimits:
+      nofile:
+        soft: 262144
+        hard: 262144
+
