--- a/roles/beian/templates/index.html.j2
+++ b/roles/beian/templates/index.html.j2
@@ -2,14 +2,18 @@
 <html>
 
 <head>
-    <title>Coherence</title>
+    <title>{{ beian_title }}</title>
 </head>
 
 <body>
 
-<h1>Coherence</h1>
-<p>Hello, world!</p>
-<footer><a href="https://beian.miit.gov.cn/" target="_blank">苏ICP备20012403号-1</a></footer>
+    <h1>Coherence</h1>
+    <p>Hello, world!</p>
+    <ul>
+        <li><a href="raft.html">Raft</a></li>
+    </ul>
+    <footer><a href="https://beian.miit.gov.cn/" target="_blank">{{ beian_serial }}</a></footer>
 
 </body>
+
 </html>
