update config from actual config

--- a/roles/arch_common/templates/firewalld_public.xml.j2
+++ b/roles/arch_common/templates/firewalld_public.xml.j2
@@ -10,5 +10,6 @@
   <service name="tailscale"/>
   <port port="50000-51000" protocol="tcp"/>
   <port port="50000-51000" protocol="udp"/>
+  <masquerade/>
   <forward/>
 </zone>
