--- a/roles/miniflux/templates/docker-compose.yml.j2
+++ b/roles/miniflux/templates/docker-compose.yml.j2
@@ -1,7 +1,7 @@
 version: '3'
 services:
   miniflux:
-    image: miniflux/miniflux:latest
+    image: {{ docker_registry }}/miniflux/miniflux:latest
     restart: always
     ports:
       - "127.0.0.1:9001:8080"
@@ -30,7 +30,7 @@ services:
       - CLEANUP_ARCHIVE_UNREAD_DAYS=-1
       - CLEANUP_ARCHIVE_READ_DAYS=-1
   db:
-    image: postgres:13
+    image: {{ docker_registry }}/library/postgres:13
     restart: always
     environment:
       - POSTGRES_USER=miniflux
