--- a/roles/authelia/templates/docker-compose.yml.j2
+++ b/roles/authelia/templates/docker-compose.yml.j2
@@ -7,7 +7,7 @@ networks:
 
 services:
   authelia:
-    image: {{ docker_mirror }}/authelia/authelia
+    image: {{ docker_registry }}/authelia/authelia
     container_name: authelia
     volumes:
       - ./config:/config
@@ -24,7 +24,7 @@ services:
       - TZ=Aisa/Shanghai
 
   redis:
-    image: {{ docker_mirror }}/library/redis:alpine
+    image: {{ docker_registry }}/library/redis:alpine
     container_name: redis
     volumes:
       - ./redis:/data
