--- a/roles/fava/templates/docker-compose.yml.j2
+++ b/roles/fava/templates/docker-compose.yml.j2
@@ -1,7 +1,7 @@
 version: "3.9"
 services:
     fava:
-        image: yegle/fava
+        image: {{ docker_registry }}/yegle/fava
         container_name: fava
         restart: always
         volumes:
