--- a/roles/gitea/templates/app.ini.j2
+++ b/roles/gitea/templates/app.ini.j2
@@ -4,49 +4,49 @@ RUN_MODE = prod
 WORK_PATH = /var/lib/gitea
 
 [server]
-DOMAIN           = git.coherence.space
-ROOT_URL         = https://git.coherence.space/
-HTTP_ADDR        = 127.0.0.1
-HTTP_PORT        = 9010
-SSH_DOMAIN       = git.coherence.space
-DISABLE_SSH      = false
-SSH_PORT         = 22
+DOMAIN = git.coherence.space
+ROOT_URL = https://git.coherence.space/
+HTTP_ADDR = 127.0.0.1
+HTTP_PORT = 9010
+SSH_DOMAIN = git.coherence.space
+DISABLE_SSH = false
+SSH_PORT = 22
 LFS_START_SERVER = true
-LFS_JWT_SECRET   = {{ LFS_JWT_SECRET }}
-OFFLINE_MODE     = false
+LFS_JWT_SECRET = {{ LFS_JWT_SECRET }}
+OFFLINE_MODE = false
 
 [database]
-DB_TYPE  = sqlite3
-PATH     = /var/lib/gitea/gitea.db
-HOST     = 
-NAME     = 
-USER     = 
-PASSWD   = 
-SCHEMA   = 
+DB_TYPE = sqlite3
+PATH = /var/lib/gitea/gitea.db
+HOST = 
+NAME = 
+USER = 
+PASSWD = 
+SCHEMA = 
 SSL_MODE = disable
-CHARSET  = utf8
-LOG_SQL  = false
+CHARSET = utf8
+LOG_SQL = false
 
 [service]
-DISABLE_REGISTRATION              = true
-REQUIRE_SIGNIN_VIEW               = true
-REGISTER_EMAIL_CONFIRM            = false
-ENABLE_NOTIFY_MAIL                = false
-ALLOW_ONLY_EXTERNAL_REGISTRATION  = false
-ENABLE_CAPTCHA                    = false
-DEFAULT_KEEP_EMAIL_PRIVATE        = false
+DISABLE_REGISTRATION = true
+REQUIRE_SIGNIN_VIEW = true
+REGISTER_EMAIL_CONFIRM = false
+ENABLE_NOTIFY_MAIL = false
+ALLOW_ONLY_EXTERNAL_REGISTRATION = false
+ENABLE_CAPTCHA = false
+DEFAULT_KEEP_EMAIL_PRIVATE = false
 DEFAULT_ALLOW_CREATE_ORGANIZATION = true
-DEFAULT_ENABLE_TIMETRACKING       = true
-NO_REPLY_ADDRESS                  = noreply.git.coherence.space
+DEFAULT_ENABLE_TIMETRACKING = true
+NO_REPLY_ADDRESS = noreply.git.coherence.space
 
 [ui]
 ISSUE_PAGING_NUM = 100
 
 [session]
-PROVIDER = db
-SESSION_LIFE_TIME = 8640000 # 100 days
-GC_INTERVAL_TIME  = 8640000
-PROVIDER          = file
+PROVIDER = file
+# 100 days
+SESSION_LIFE_TIME = 8640000
+GC_INTERVAL_TIME = 8640000
 
 [repository]
 ROOT = /var/lib/gitea/data/gitea-repositories
@@ -62,10 +62,10 @@ ENABLE_OPENID_SIGNIN = true
 ENABLE_OPENID_SIGNUP = false
 
 [log]
-MODE      = console
-LEVEL     = info
+MODE = console
+LEVEL = info
 ROOT_PATH = /var/lib/gitea/log
-ROUTER    = console
+ROUTER = console
 
 [repository.pull-request]
 DEFAULT_MERGE_STYLE = merge
@@ -74,6 +74,9 @@ DEFAULT_MERGE_STYLE = merge
 DEFAULT_TRUST_MODEL = committer
 
 [security]
-INSTALL_LOCK       = true
-INTERNAL_TOKEN     = {{ INTERNAL_TOKEN }}
-PASSWORD_HASH_ALGO = pbkdf2
+INSTALL_LOCK = true
+INTERNAL_TOKEN = {{ INTERNAL_TOKEN }}
+PASSWORD_HASH_ALGO = pbkdf2 
+
+[oauth2]
+JWT_SECRET = {{ JWT_SECRET }}
