--- a/roles/syncthing/templates/config/config.xml.j2
+++ b/roles/syncthing/templates/config/config.xml.j2
@@ -1,22 +1,30 @@
-<configuration version="32">
+<configuration version="37">
     <folder id="onedrive" label="" path="/var/syncthing/onedrive" type="receiveonly" rescanIntervalS="3600" fsWatcherEnabled="true" fsWatcherDelayS="10" ignorePerms="false" autoNormalize="true">
         <filesystemType>basic</filesystemType>
-        <device id="ABB7ITZ-Y2ZDCCP-UUIKJPG-YBSJBKO-5LRNJVM-V7HKLL7-IO3F2ES-MDR4CQV" introducedBy="">
+        <device id="A5EBNHU-AMN63DS-5V57TYC-EXYCX7W-FPTQ6ET-X5TFV7O-DO6WBBY-NKMSRQ2" introducedBy="VWYKAZW-N6FASZJ-RRIVHXO-HZUGXQA-JXBMBNX-WMEXXHP-P5KPX6O-NXIMHAR">
             <encryptionPassword></encryptionPassword>
         </device>
-        <device id="KUEHAHW-TAOPHET-LZTWQ5J-EVQL5KA-TVSI2VH-SLOCUUJ-HK3AYE7-S3BBSAD" introducedBy="">
+        <device id="BQ6TKV6-Y6QCD2U-GW6NLHR-WT7TUME-T2HV36A-XVTBQ2H-MPJ6BKQ-FQ4JGAD" introducedBy="VWYKAZW-N6FASZJ-RRIVHXO-HZUGXQA-JXBMBNX-WMEXXHP-P5KPX6O-NXIMHAR">
+            <encryptionPassword></encryptionPassword>
+        </device>
+        <device id="HPOQUGC-3WINXQB-Y7WVB3U-RQJNZ25-5STF7N6-IA5T6S5-TEKITES-OBBIOA3" introducedBy="">
             <encryptionPassword></encryptionPassword>
         </device>
         <device id="S37NE43-64TIMVR-FEE2X5Q-FPVNMBO-HRW7S22-VXW5KIY-67FLKE3-YLXS5QT" introducedBy="">
             <encryptionPassword></encryptionPassword>
         </device>
-        <device id="VWYKAZW-N6FASZJ-RRIVHXO-HZUGXQA-JXBMBNX-WMEXXHP-P5KPX6O-NXIMHAR" introducedBy="">
+        <device id="T6HBCYP-AM2SXF6-SZQ6UFG-W44LLWR-CCW6TMO-QW4YEJV-GOSRFN5-RFYKZAX" introducedBy="A5EBNHU-AMN63DS-5V57TYC-EXYCX7W-FPTQ6ET-X5TFV7O-DO6WBBY-NKMSRQ2">
+            <encryptionPassword></encryptionPassword>
+        </device>
+        <device id="YXZHVZH-WZUVTUE-HOPNKEQ-UT4ILQP-7DNSLYD-MLXTV2A-OHFR5D5-FEZC5QO" introducedBy="A5EBNHU-AMN63DS-5V57TYC-EXYCX7W-FPTQ6ET-X5TFV7O-DO6WBBY-NKMSRQ2">
             <encryptionPassword></encryptionPassword>
         </device>
         <minDiskFree unit="%">1</minDiskFree>
         <versioning type="trashcan">
             <param key="cleanoutDays" val="7"></param>
             <cleanupIntervalS>3600</cleanupIntervalS>
+            <fsPath></fsPath>
+            <fsType>basic</fsType>
         </versioning>
         <copiers>0</copiers>
         <pullerMaxPendingKiB>0</pullerMaxPendingKiB>
@@ -39,8 +47,16 @@
         <copyRangeMethod>standard</copyRangeMethod>
         <caseSensitiveFS>false</caseSensitiveFS>
         <junctionsAsDirs>false</junctionsAsDirs>
+        <syncOwnership>false</syncOwnership>
+        <sendOwnership>false</sendOwnership>
+        <syncXattrs>false</syncXattrs>
+        <sendXattrs>false</sendXattrs>
+        <xattrFilter>
+            <maxSingleEntrySize>0</maxSingleEntrySize>
+            <maxTotalSize>0</maxTotalSize>
+        </xattrFilter>
     </folder>
-    <device id="ABB7ITZ-Y2ZDCCP-UUIKJPG-YBSJBKO-5LRNJVM-V7HKLL7-IO3F2ES-MDR4CQV" name="Surface-Coherence" compression="metadata" introducer="false" skipIntroductionRemovals="false" introducedBy="Z3NIO26-IKPCAJP-RVGTNMZ-6VCIXGG-RHHQBYD-4FCCIYY-7LU6CTL-XLMD4QI">
+    <device id="A5EBNHU-AMN63DS-5V57TYC-EXYCX7W-FPTQ6ET-X5TFV7O-DO6WBBY-NKMSRQ2" name="ONEPLUS-KB2000" compression="metadata" introducer="true" skipIntroductionRemovals="false" introducedBy="VWYKAZW-N6FASZJ-RRIVHXO-HZUGXQA-JXBMBNX-WMEXXHP-P5KPX6O-NXIMHAR">
         <address>dynamic</address>
         <paused>false</paused>
         <autoAcceptFolders>false</autoAcceptFolders>
@@ -48,8 +64,10 @@
         <maxRecvKbps>0</maxRecvKbps>
         <maxRequestKiB>0</maxRequestKiB>
         <untrusted>false</untrusted>
+        <remoteGUIPort>0</remoteGUIPort>
+        <numConnections>0</numConnections>
     </device>
-    <device id="KUEHAHW-TAOPHET-LZTWQ5J-EVQL5KA-TVSI2VH-SLOCUUJ-HK3AYE7-S3BBSAD" name="oneplus5" compression="metadata" introducer="false" skipIntroductionRemovals="false" introducedBy="Z3NIO26-IKPCAJP-RVGTNMZ-6VCIXGG-RHHQBYD-4FCCIYY-7LU6CTL-XLMD4QI">
+    <device id="BQ6TKV6-Y6QCD2U-GW6NLHR-WT7TUME-T2HV36A-XVTBQ2H-MPJ6BKQ-FQ4JGAD" name="coherence-deskmini" compression="metadata" introducer="false" skipIntroductionRemovals="false" introducedBy="VWYKAZW-N6FASZJ-RRIVHXO-HZUGXQA-JXBMBNX-WMEXXHP-P5KPX6O-NXIMHAR">
         <address>dynamic</address>
         <paused>false</paused>
         <autoAcceptFolders>false</autoAcceptFolders>
@@ -57,8 +75,10 @@
         <maxRecvKbps>0</maxRecvKbps>
         <maxRequestKiB>0</maxRequestKiB>
         <untrusted>false</untrusted>
+        <remoteGUIPort>0</remoteGUIPort>
+        <numConnections>0</numConnections>
     </device>
-    <device id="S37NE43-64TIMVR-FEE2X5Q-FPVNMBO-HRW7S22-VXW5KIY-67FLKE3-YLXS5QT" name="iZj6c8m9b1tzqdljiqvzlbZ" compression="metadata" introducer="false" skipIntroductionRemovals="false" introducedBy="">
+    <device id="HPOQUGC-3WINXQB-Y7WVB3U-RQJNZ25-5STF7N6-IA5T6S5-TEKITES-OBBIOA3" name="ONEPLUS A5000" compression="metadata" introducer="false" skipIntroductionRemovals="false" introducedBy="">
         <address>dynamic</address>
         <paused>false</paused>
         <autoAcceptFolders>false</autoAcceptFolders>
@@ -66,17 +86,43 @@
         <maxRecvKbps>0</maxRecvKbps>
         <maxRequestKiB>0</maxRequestKiB>
         <untrusted>false</untrusted>
+        <remoteGUIPort>0</remoteGUIPort>
+        <numConnections>0</numConnections>
     </device>
-    <device id="VWYKAZW-N6FASZJ-RRIVHXO-HZUGXQA-JXBMBNX-WMEXXHP-P5KPX6O-NXIMHAR" name="coherence" compression="metadata" introducer="true" skipIntroductionRemovals="false" introducedBy="">
+    <device id="S37NE43-64TIMVR-FEE2X5Q-FPVNMBO-HRW7S22-VXW5KIY-67FLKE3-YLXS5QT" name="tencent-beijing" compression="metadata" introducer="false" skipIntroductionRemovals="false" introducedBy="">
         <address>dynamic</address>
         <paused>false</paused>
-        <autoAcceptFolders>true</autoAcceptFolders>
+        <autoAcceptFolders>false</autoAcceptFolders>
         <maxSendKbps>0</maxSendKbps>
         <maxRecvKbps>0</maxRecvKbps>
         <maxRequestKiB>0</maxRequestKiB>
         <untrusted>false</untrusted>
+        <remoteGUIPort>0</remoteGUIPort>
+        <numConnections>0</numConnections>
     </device>
-    <gui enabled="true" tls="false" debugging="false">
+    <device id="T6HBCYP-AM2SXF6-SZQ6UFG-W44LLWR-CCW6TMO-QW4YEJV-GOSRFN5-RFYKZAX" name="Surface Pro 7" compression="metadata" introducer="false" skipIntroductionRemovals="false" introducedBy="A5EBNHU-AMN63DS-5V57TYC-EXYCX7W-FPTQ6ET-X5TFV7O-DO6WBBY-NKMSRQ2">
+        <address>dynamic</address>
+        <paused>false</paused>
+        <autoAcceptFolders>false</autoAcceptFolders>
+        <maxSendKbps>0</maxSendKbps>
+        <maxRecvKbps>0</maxRecvKbps>
+        <maxRequestKiB>0</maxRequestKiB>
+        <untrusted>false</untrusted>
+        <remoteGUIPort>0</remoteGUIPort>
+        <numConnections>0</numConnections>
+    </device>
+    <device id="YXZHVZH-WZUVTUE-HOPNKEQ-UT4ILQP-7DNSLYD-MLXTV2A-OHFR5D5-FEZC5QO" name="coherence-macbook.local" compression="metadata" introducer="false" skipIntroductionRemovals="false" introducedBy="A5EBNHU-AMN63DS-5V57TYC-EXYCX7W-FPTQ6ET-X5TFV7O-DO6WBBY-NKMSRQ2">
+        <address>dynamic</address>
+        <paused>false</paused>
+        <autoAcceptFolders>false</autoAcceptFolders>
+        <maxSendKbps>0</maxSendKbps>
+        <maxRecvKbps>0</maxRecvKbps>
+        <maxRequestKiB>0</maxRequestKiB>
+        <untrusted>false</untrusted>
+        <remoteGUIPort>0</remoteGUIPort>
+        <numConnections>0</numConnections>
+    </device>
+    <gui enabled="true" tls="false" debugging="false" sendBasicAuthPrompt="false">
         <address>127.0.0.1:8384</address>
         <apikey>J6Xo9DjAa22bx5j7P5srbHynDEyDo9ir</apikey>
         <theme>default</theme>
@@ -105,7 +151,6 @@
         <urURL>https://data.syncthing.net/newdata</urURL>
         <urPostInsecurely>false</urPostInsecurely>
         <urInitialDelayS>1800</urInitialDelayS>
-        <restartOnWakeup>true</restartOnWakeup>
         <autoUpgradeIntervalH>12</autoUpgradeIntervalH>
         <upgradeToPreReleases>false</upgradeToPreReleases>
         <keepTemporariesH>24</keepTemporariesH>
@@ -117,7 +162,6 @@
         <overwriteRemoteDeviceNamesOnConnect>false</overwriteRemoteDeviceNamesOnConnect>
         <tempIndexMinBlocks>10</tempIndexMinBlocks>
         <trafficClass>0</trafficClass>
-        <defaultFolderPath>~</defaultFolderPath>
         <setLowPriority>true</setLowPriority>
         <maxFolderConcurrency>0</maxFolderConcurrency>
         <crashReportingURL>https://crash.syncthing.net/newcrash</crashReportingURL>
@@ -129,5 +173,69 @@
         <maxConcurrentIncomingRequestKiB>0</maxConcurrentIncomingRequestKiB>
         <announceLANAddresses>true</announceLANAddresses>
         <sendFullIndexOnUpgrade>false</sendFullIndexOnUpgrade>
+        <connectionLimitEnough>0</connectionLimitEnough>
+        <connectionLimitMax>0</connectionLimitMax>
+        <insecureAllowOldTLSVersions>false</insecureAllowOldTLSVersions>
+        <connectionPriorityTcpLan>10</connectionPriorityTcpLan>
+        <connectionPriorityQuicLan>20</connectionPriorityQuicLan>
+        <connectionPriorityTcpWan>30</connectionPriorityTcpWan>
+        <connectionPriorityQuicWan>40</connectionPriorityQuicWan>
+        <connectionPriorityRelay>50</connectionPriorityRelay>
+        <connectionPriorityUpgradeThreshold>0</connectionPriorityUpgradeThreshold>
     </options>
+    <defaults>
+        <folder id="" label="" path="~" type="sendreceive" rescanIntervalS="3600" fsWatcherEnabled="true" fsWatcherDelayS="10" ignorePerms="false" autoNormalize="true">
+            <filesystemType>basic</filesystemType>
+            <device id="S37NE43-64TIMVR-FEE2X5Q-FPVNMBO-HRW7S22-VXW5KIY-67FLKE3-YLXS5QT" introducedBy="">
+                <encryptionPassword></encryptionPassword>
+            </device>
+            <minDiskFree unit="%">1</minDiskFree>
+            <versioning>
+                <cleanupIntervalS>3600</cleanupIntervalS>
+                <fsPath></fsPath>
+                <fsType>basic</fsType>
+            </versioning>
+            <copiers>0</copiers>
+            <pullerMaxPendingKiB>0</pullerMaxPendingKiB>
+            <hashers>0</hashers>
+            <order>random</order>
+            <ignoreDelete>false</ignoreDelete>
+            <scanProgressIntervalS>0</scanProgressIntervalS>
+            <pullerPauseS>0</pullerPauseS>
+            <maxConflicts>10</maxConflicts>
+            <disableSparseFiles>false</disableSparseFiles>
+            <disableTempIndexes>false</disableTempIndexes>
+            <paused>false</paused>
+            <weakHashThresholdPct>25</weakHashThresholdPct>
+            <markerName>.stfolder</markerName>
+            <copyOwnershipFromParent>false</copyOwnershipFromParent>
+            <modTimeWindowS>0</modTimeWindowS>
+            <maxConcurrentWrites>2</maxConcurrentWrites>
+            <disableFsync>false</disableFsync>
+            <blockPullOrder>standard</blockPullOrder>
+            <copyRangeMethod>standard</copyRangeMethod>
+            <caseSensitiveFS>false</caseSensitiveFS>
+            <junctionsAsDirs>false</junctionsAsDirs>
+            <syncOwnership>false</syncOwnership>
+            <sendOwnership>false</sendOwnership>
+            <syncXattrs>false</syncXattrs>
+            <sendXattrs>false</sendXattrs>
+            <xattrFilter>
+                <maxSingleEntrySize>1024</maxSingleEntrySize>
+                <maxTotalSize>4096</maxTotalSize>
+            </xattrFilter>
+        </folder>
+        <device id="" compression="metadata" introducer="false" skipIntroductionRemovals="false" introducedBy="">
+            <address>dynamic</address>
+            <paused>false</paused>
+            <autoAcceptFolders>false</autoAcceptFolders>
+            <maxSendKbps>0</maxSendKbps>
+            <maxRecvKbps>0</maxRecvKbps>
+            <maxRequestKiB>0</maxRequestKiB>
+            <untrusted>false</untrusted>
+            <remoteGUIPort>0</remoteGUIPort>
+            <numConnections>0</numConnections>
+        </device>
+        <ignores></ignores>
+    </defaults>
 </configuration>
