--- a/roles/syncthing/templates/docker-compose.yml.j2
+++ b/roles/syncthing/templates/docker-compose.yml.j2
@@ -1,7 +1,7 @@
 version: "3.9"
 services:
   syncthing:
-    image: syncthing/syncthing:latest
+    image: {{ docker_registry }}/syncthing/syncthing:latest
     container_name: syncthing
     restart: always
     volumes:
