role: tailscale derp server

--- a/roles/monitoring_server/templates/prometheus.yml.j2
+++ b/roles/monitoring_server/templates/prometheus.yml.j2
@@ -12,6 +12,7 @@ scrape_configs:
             - "deskmini:9100"
             - "beijing:9100"
             - "friendlywrt:9100"
+            - "shanghai:9100"
 
     - job_name: 'prometheus'
       scheme: https
