--- a/roles/authelia/templates/configuration.yml.j2
+++ b/roles/authelia/templates/configuration.yml.j2
@@ -3,12 +3,17 @@
 #                   Authelia configuration                    #
 ###############################################################
 
-jwt_secret: {{ secret }}
-default_redirection_url: {{ auth_server }}
+identity_validation:
+  reset_password:
+    jwt_secret: {{ secret }}
 
 server:
-  host: 0.0.0.0
-  port: 9091
+  address: 'tcp://0.0.0.0:9091/'
+  endpoints:
+    authz:
+      forward-auth:
+        implementation: 'ForwardAuth'
+
 
 log:
   level: debug
@@ -48,8 +53,11 @@ session:
   secret: {{ secret }}
   expiration: 3600  # 1 hour
   inactivity: 300  # 5 minutes
-  domain: coherence.space  # Should match whatever your root protected domain is
-  remember_me_duration: 1y
+  remember_me: 1y
+  cookies:
+  - domain: coherence.space  # Should match whatever your root protected domain is
+    authelia_url: {{ auth_server }}
+    default_redirection_url: https://www.coherence.space
 
   redis:
     host: redis
@@ -75,8 +83,9 @@ notifier:
 identity_providers:
   oidc:
     hmac_secret: {{ secret }}
-    issuer_private_key: |
-      {{ issuer_private_key | indent(width=6) }}
+    jwks:
+    - key: |
+        {{ issuer_private_key | indent(width=8) }}
     cors:
       endpoints:
         - authorization
@@ -85,22 +94,22 @@ identity_providers:
         - introspection
       allowed_origins: "*"
     clients:
-      - id: miniflux
-        secret: {{ oidc_secret_hash }}
+      - client_id: miniflux
+        client_secret: {{ oidc_secret_hash }}
         authorization_policy: one_factor
         redirect_uris:
           - https://rss.coherence.space/oauth2/oidc/callback
         pre_configured_consent_duration: 1y
 
-      - id: grafana
-        secret: {{ oidc_secret_hash }}
+      - client_id: grafana
+        client_secret: {{ oidc_secret_hash }}
         authorization_policy: one_factor
         redirect_uris:
           - https://grafana.coherence.space/login/generic_oauth
         pre_configured_consent_duration: 1y
 
-      - id: gitea
-        secret: {{ oidc_secret_hash }}
+      - client_id: gitea
+        client_secret: {{ oidc_secret_hash }}
         authorization_policy: one_factor
         redirect_uris:
           - https://git.coherence.space/user/oauth2/authelia/callback
