--- a/roles/fava/templates/fava.caddy.j2
+++ b/roles/fava/templates/fava.caddy.j2
@@ -2,7 +2,7 @@ fava.coherence.space {
     reverse_proxy 127.0.0.1:6674
     {# FIXME: upstream can't be a https site, see: https://git.coherence.space/cjc7373/issue_tracker/issues/107 #}
     forward_auth 127.0.0.1:8045 {
-		uri /api/verify?rd=https://auth.coherence.space
+		uri /api/authz/forward-auth
         {# This Host rewrite is necessary, See: 
         https://caddyserver.com/docs/caddyfile/directives/reverse_proxy#https #}
         {# header_up Host {upstream_hostport} #}
