migrate to tencent shanghai

--- a/roles/syncthing/templates/config/config.xml.j2
+++ b/roles/syncthing/templates/config/config.xml.j2
@@ -89,7 +89,7 @@
         <remoteGUIPort>0</remoteGUIPort>
         <numConnections>0</numConnections>
     </device>
-    <device id="S37NE43-64TIMVR-FEE2X5Q-FPVNMBO-HRW7S22-VXW5KIY-67FLKE3-YLXS5QT" name="tencent-beijing" compression="metadata" introducer="false" skipIntroductionRemovals="false" introducedBy="">
+    <device id="S37NE43-64TIMVR-FEE2X5Q-FPVNMBO-HRW7S22-VXW5KIY-67FLKE3-YLXS5QT" name="tencent-shanghai" compression="metadata" introducer="false" skipIntroductionRemovals="false" introducedBy="">
         <address>dynamic</address>
         <paused>false</paused>
         <autoAcceptFolders>false</autoAcceptFolders>
