--- a/roles/gitea/templates/app.ini.j2
+++ b/roles/gitea/templates/app.ini.j2
@@ -65,7 +65,7 @@ ENABLE_OPENID_SIGNUP = false
 MODE = console
 LEVEL = info
 ROOT_PATH = /var/lib/gitea/log
-ROUTER = console
+logger.router.MODE = console
 
 [repository.pull-request]
 DEFAULT_MERGE_STYLE = merge
