--- a/roles/arch_common/templates/sshd_config.j2
+++ b/roles/arch_common/templates/sshd_config.j2
@@ -122,3 +122,7 @@ Subsystem	sftp	/usr/lib/ssh/sftp-server
 {% if 'beijing' in group_names %}
 AllowUsers root gitea zjb
 {% endif %}
+
+{% if 'shanghai' in group_names %}
+AllowUsers root gitea
+{% endif %}
