--- a/roles/plausible_analytics/templates/plausible-conf.env.j2
+++ b/roles/plausible_analytics/templates/plausible-conf.env.j2
@@ -5,3 +5,4 @@ BASE_URL=https://{{ domain }}.{{ zone }}
 SECRET_KEY_BASE={{ SECRET_KEY_BASE }}
 PORT=8000
 DISABLE_REGISTRATION=true
+DATABASE_URL=postgres://{{POSTGRES_USER}}:{{POSTGRES_PASSWORD}}@postgresql/plausible_db?sslmode=disable
