--- a/roles/joplin_server/templates/docker-compose.yml.j2
+++ b/roles/joplin_server/templates/docker-compose.yml.j2
@@ -1,19 +1,8 @@
 services:
-    db:
-        image: {{ docker_registry }}/library/postgres:16
-        volumes:
-            - ./data:/var/lib/postgresql/data
-        ports:
-            - "5432"
-        restart: unless-stopped
-        environment:
-            - POSTGRES_PASSWORD={{POSTGRES_PASSWORD}}
-            - POSTGRES_USER={{POSTGRES_USER}}
-            - POSTGRES_DB=joplin
     app:
-        image: {{ docker_registry }}/joplin/server:latest
-        depends_on:
-            - db
+        image: {{ docker_registry }}/joplin/server:3.3.4-beta
+        networks:
+            - database
         ports:
             - "127.0.0.1:22300:22300"
         restart: unless-stopped
@@ -26,4 +15,7 @@ services:
             - POSTGRES_DATABASE=joplin
             - POSTGRES_USER={{POSTGRES_USER}}
             - POSTGRES_PORT=5432
-            - POSTGRES_HOST=db
+            - POSTGRES_HOST=postgresql
+networks:
+    database:
+        external: true
