upgrade plausible analytics to 2.1.5

--- a/roles/plausible_analytics/templates/docker-compose.yml.j2
+++ b/roles/plausible_analytics/templates/docker-compose.yml.j2
@@ -6,7 +6,7 @@ services:
     restart: always
 
   plausible_events_db:
-    image: {{ docker_registry }}/clickhouse/clickhouse-server:22.6-alpine
+    image: {{ docker_registry }}/clickhouse/clickhouse-server:24.3.3.102-alpine
     networks:
       - default
     restart: always
@@ -20,12 +20,12 @@ services:
         hard: 262144
 
   plausible:
-    image: {{ docker_registry }}/plausible/analytics:v2.0.0
+    image: {{ docker_registry }}/plausible/community-edition:v2.1.4
     networks:
       - default
       - database
     restart: always
-    command: sh -c "sleep 10 && /entrypoint.sh db createdb && /entrypoint.sh db migrate && /entrypoint.sh db init-admin && /entrypoint.sh run"
+    command: sh -c "sleep 10 && /entrypoint.sh db createdb && /entrypoint.sh db migrate && /entrypoint.sh run"
     depends_on:
       - plausible_events_db
       - mail
