move esp32 endpoint to apollo

--- a/roles/monitoring_server/templates/prometheus-longterm.yml.j2
+++ b/roles/monitoring_server/templates/prometheus-longterm.yml.j2
@@ -6,7 +6,7 @@ scrape_configs:
     metrics_path: /esp32/metrics
     scrape_interval: 15s
     static_configs:
-      - targets: ['deskmini:80']
+      - targets: ['apollo:10010']
     metric_relabel_configs:
       - source_labels: [ name ]
         target_label: "type"
