--- a/roles/postgresql/templates/docker-compose.yaml.j2
+++ b/roles/postgresql/templates/docker-compose.yaml.j2
@@ -7,6 +7,8 @@ services:
     restart: unless-stopped
     networks:
       - database
+    ports:
+      - 127.0.0.1:5432:5432
     environment:
       - POSTGRES_PASSWORD={{POSTGRES_PASSWORD}}
       - POSTGRES_USER={{POSTGRES_USER}}
