--- a/roles/monitoring_server/templates/prometheus.yml.j2
+++ b/roles/monitoring_server/templates/prometheus.yml.j2
@@ -8,9 +8,8 @@ scrape_configs:
       # scheme defaults to 'http'.
       static_configs:
           - targets:
-            - 'hk:9100'
+            - 'athena:9100'
             - "deskmini:9100"
-            - "friendlywrt:9100"
             - "shanghai:9100"
 
     - job_name: 'prometheus'
@@ -25,4 +24,4 @@ scrape_configs:
 
     - job_name: "caddy"
       static_configs:
-          - targets: ['beijing:2019']
+          - targets: ['shanghai:2019']
