--- a/roles/arch_common/templates/firewalld_public.xml.j2
+++ b/roles/arch_common/templates/firewalld_public.xml.j2
@@ -8,6 +8,10 @@
   <service name="https"/>
   <service name="syncthing"/>
   <service name="tailscale"/>
+  {# for tuic  #}
+  <port port="8443" protocol="tcp"/>
+  <port port="8443" protocol="tcp"/>
+
   <port port="50000-51000" protocol="tcp"/>
   <port port="50000-51000" protocol="udp"/>
   <masquerade/>
